# crabgrind

./: .cspell.dict  .cspell.json  .gitignore  .markdownlint.json  Cargo.toml  Cross.toml  Justfile  README.md  bindings.rs  build.rs  export.c  lib.rs  rust-toolchain.toml  rustfmt.toml  shell.nix  wrapper.h
.cargo/: config
LICENSE/: MIT.LICENSE  cachegrind.h.LICENSE  callgrind.h.LICENSE  dhat.h.LICENSE  drd.h.LICENSE  helgrind.h.LICENSE  memcheck.h.LICENSE  valgrind.h.LICENSE
doc/: ScopeGuard.md  VALGRIND_AVAILABLE.md  cachegrind.md  callgrind.md  dhat.md  drd.md  helgrind.md  memcheck.md  println.md  println_stacktrace.md  valgrind.md  valgrind_client_request_expr.md
doc/cachegrind/: start_instrumentation.md  stop_instrumentation.md
doc/callgrind/: dump_stats.md  start_instrumentation.md  stop_instrumentation.md  toggle_collect.md  zero_stats.md
doc/dhat/: ad_hoc_event.md  histogram_memory.md
doc/drd/: annotate_benign_race.md  annotate_benign_race_sized.md  annotate_ignore_reads.md  annotate_ignore_writes.md  annotate_new_memory.md  annotate_thread_name.md  annotate_trace_memory.md  drd_thread_id.md  ignore_var.md  trace_var.md  valgrind_thread_id.md
doc/helgrind/: annotate_happens_after.md  annotate_happens_before.md  annotate_happens_before_forget_all.md  annotate_rwlock_acquired.md  annotate_rwlock_create.md  annotate_rwlock_destroy.md  annotate_rwlock_released.md  clean_memory.md
doc/memcheck/: LeakCheck.md  LeaksCount.md  MemState.md  OffendingOffset.md  UnaddressableBytes.md  check_mem_addressable.md  check_mem_defined.md  count_leak_blocks.md  count_leaks.md  create_block.md  disable_error_reporting.md  disable_reporting.md  discard_block.md  enable_error_reporting.md  leak_check.md  mark_memory.md  set_vbits.md  vbits.md
doc/memcheck/leakcheck/: added.md  changed.md  full.md  new.md  quick.md
doc/memcheck/memstate/: defined.md  defined_if_addressable.md  noaccess.md  undefined.md
doc/valgrind/: RunningMode.md  change_clo.md  count_errors.md  create_mempool.md  disable_error_reporting.md  disable_reporting.md  discard_translations.md  enable_error_reporting.md  freelike_block.md  load_pdb_debuginfo.md  malloclike_block.md  map_ip_to_srcloc.md  mempool_alloc.md  mempool_change.md  mempool_destroy.md  mempool_exists.md  mempool_free.md  mempool_trim.md  monitor_command.md  move_mempool.md  non_simd_call.md  non_simd_call1.md  non_simd_call2.md  non_simd_call3.md  replaces_malloc.md  resizeinplace_block.md  running_mode.md  stack_change.md  stack_deregister.md  stack_register.md  toolname.md
scripts/: cross_all.sh
src/: bindings.rs  lib.rs
src/requests/: cachegrind.rs  callgrind.rs  constants.rs  dhat.rs  drd.rs  helgrind.rs  memcheck.rs  mod.rs  valgrind.rs
tests/: cachegrind.rs  callgrind.rs  dhat.rs  drd.rs  helgrind.rs  memcheck.rs  stubs.rs  valgrind.rs
tests/common/: mod.rs
valgrind/: client_request.defs  gen_wrapper.py  native.c  valgrind_version.rs  wrapper.h  wrapper.head
valgrind/include/valgrind/: valgrind.h
