[package]
name = "crabgrind"
version = "0.2.0"
license = "MIT"
edition = "2021"
rust-version = "1.64"
description = "Rust bindings to \"Valgrind Client Request\" interface"
keywords = ["valgrind", "massif", "callgrind", "cachegrind", "helgrind", "drd", "dhat"]
categories = ["api-bindings", "development-tools::profiling", "development-tools::testing"]
repository = "https://github.com/2dav/crabgrind"
homepage = "https://github.com/2dav/crabgrind"
documentation = "https://docs.rs/crabgrind"
readme = "README.md"

[features]
default = []
mismatch-ignore = []
opt-out = []

[build-dependencies]
cc = { version = "1" }
bindgen = "0.72"
pkg-config = "0.3"

[dev-dependencies]
regex = "1"
lazy_static = "1"
libc = "0.2"

[profile.release]
debug = "full"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lints.rust]
missing_docs = "warn"
unsafe_op_in_unsafe_fn = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
inline_always = "allow"
cast_lossless = "allow"
must_use_candidate = "allow"
missing_errors_doc = "deny"

