[package]
name = "crabgrind"
version = "0.3.1"
license = "MIT"
edition = "2021"
rust-version = "1.71"
description = "Rust bindings to \"Valgrind Client Request\" interface"
keywords = ["valgrind", "callgrind", "cachegrind", "memcheck", "client-requests"]
categories = ["api-bindings", "development-tools::profiling", "development-tools::testing"]
repository = "https://github.com/2dav/crabgrind"
homepage = "https://github.com/2dav/crabgrind"
documentation = "https://docs.rs/crabgrind"
readme = "README.md"
exclude = [".gitignore", "Justfile", "Cross.toml", "rustfmt.toml", "rust-toolchain.toml", "shell.nix",
			"*.sh", "*.py", "*.defs", "*.head", "*.dict", "*.json", "tests/*"]

[features]
default = ["valgrind"]
# Enables execution of client requests.
# When disabled, all requests are no-ops and no native build steps or build dependencies are used.
valgrind = ["dep:cc", "dep:bindgen", "dep:pkg-config"]
# `opt-out` was removed (v0.3). Use `default-features = false`.
opt-out = []

[build-dependencies]
cc = { version = "1", optional = true }
bindgen = { version = "0.72", optional = true }
pkg-config = { version = "0.3", optional = true }
rustversion = "1.0"

[dev-dependencies]
regex = "1"
lazy_static = "1"
libc = "0.2"

[profile.release]
debug = "full"

[package.metadata.docs.rs]
targets = []
no-default-features = true

[lints.rust]
unsafe_op_in_unsafe_fn = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
inline_always = "allow"
cast_lossless = "allow"
wildcard_imports = "allow"
must_use_candidate = "allow"
missing_errors_doc = "deny"
